--- a/core3/graph-render/trunk/pom.xml
+++ b/core3/graph-render/trunk/pom.xml
@@ -104,7 +104,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
-			<version>3.0.0-alpha2</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
