--- a/core3/layout-cytoscape-impl/trunk/pom.xml
+++ b/core3/layout-cytoscape-impl/trunk/pom.xml
@@ -21,38 +21,38 @@
 
   <packaging>bundle</packaging>
 
-    <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/layout-cytoscape-impl/trunk</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/layout-cytoscape-impl/trunk</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/layout-cytoscape-impl/trunk</url>
-    </scm>
+  <scm>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/layout-cytoscape-impl/trunk</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/layout-cytoscape-impl/trunk</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/layout-cytoscape-impl/trunk</url>
+  </scm>
 
-    <repositories>
-        <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
-        <repository>
-            <id>cytoscape_snapshots</id>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <name>Cytoscape Snapshots</name>
-            <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
-        </repository>
-        <!-- bootstrap for cytoscape dependencies, namely the parent POM releases -->
-        <repository>
-            <id>cytoscape_releases</id>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <name>Cytoscape Releases</name>
-            <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
-        </repository>
-    </repositories>
+  <repositories>
+    <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
+    <repository>
+      <id>cytoscape_snapshots</id>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <name>Cytoscape Snapshots</name>
+      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+    </repository>
+    <!-- bootstrap for cytoscape dependencies, namely the parent POM releases -->
+    <repository>
+      <id>cytoscape_releases</id>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <name>Cytoscape Releases</name>
+      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
+    </repository>
+  </repositories>
 
 	<build>
 		<plugins>
@@ -81,7 +81,7 @@
 		 <dependency>
 		 	<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
-			<version>3.0.0-alpha2</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 		 </dependency>
 		 <dependency>
 		 	<groupId>org.cytoscape</groupId>
