--- a/core3/layout-jgraph-impl/trunk/pom.xml
+++ b/core3/layout-jgraph-impl/trunk/pom.xml
@@ -59,7 +59,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
