--- a/core3/manual-layout-impl/trunk/pom.xml
+++ b/core3/manual-layout-impl/trunk/pom.xml
@@ -56,7 +56,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
-      <version>[3.0.0-alpha1,4.0.0)</version>
+      <version>3.0.0-alpha3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
