--- a/core3/test-support/trunk/pom.xml
+++ b/core3/test-support/trunk/pom.xml
@@ -57,7 +57,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
-      <version>3.0.0-alpha2</version>
+      <version>3.0.0-alpha3-SNAPSHOT</version>
       <type>test-jar</type>
     </dependency>
     <dependency>
@@ -75,7 +75,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
-      <version>3.0.0-alpha2</version>
+      <version>3.0.0-alpha3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
@@ -91,7 +91,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-impl</artifactId>
-      <version>3.0.0-alpha2</version>
+      <version>3.0.0-alpha3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
