--- a/core3/vizmap-gui-impl/trunk/pom.xml
+++ b/core3/vizmap-gui-impl/trunk/pom.xml
@@ -106,6 +106,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
+			<artifactId>model-api</artifactId>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
 			<artifactId>default-mappings</artifactId>
 			<version>3.0.0-alpha1</version>
 		</dependency>
