making commons-lang provided to avoid duplication
git-svn-id: http://chianti.ucsd.edu/svn@23991 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/coreplugins/BioPAX/pom.xml
+++ b/cytoscape/trunk/coreplugins/BioPAX/pom.xml
@@ -50,6 +50,7 @@
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.4</version>
+			<scope>provided</scope> <!-- also in corelibs/commons-cli -->
 		</dependency>
 		<dependency>
 			<groupId>net.sourceforge.collections</groupId>
