--- a/cytoscape/trunk/archetypes/sample-plugin/pom.xml
+++ b/cytoscape/trunk/archetypes/sample-plugin/pom.xml
@@ -55,6 +55,7 @@
             <pomInclude>*</pomInclude>
           </pomIncludes>
           <projectsDirectory>${basedir}/src/it/projects</projectsDirectory>
+		  <postBuildHookScript>verify.bsh</postBuildHookScript>
           <properties>
             <archetypeArtifactId>${project.artifactId}</archetypeArtifactId>
             <archetypeGroupId>${project.groupId}</archetypeGroupId>
@@ -66,6 +67,19 @@
           <streamLogs>true</streamLogs>
         </configuration>
       </plugin> 
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>2.4.1</version>
+        <executions>
+          <execution>
+            <id>auto-clean</id>
+            <phase>initialize</phase>
+            <goals>
+              <goal>clean</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
