--- a/core3/swing-application-impl/trunk/pom.xml
+++ b/core3/swing-application-impl/trunk/pom.xml
@@ -84,7 +84,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>swing-application-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
