--- a/core3/vizmap-gui-impl/trunk/pom.xml
+++ b/core3/vizmap-gui-impl/trunk/pom.xml
@@ -120,6 +120,18 @@
 			<version>3.0.0-alpha1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>core-task-api</artifactId>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>service-util</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
+
 		<!-- Wrapped 3rd party libraries -->
 		<dependency>
 			<groupId>cytoscape-temp</groupId>
