Updated to the newest version of model-api.
git-svn-id: http://chianti.ucsd.edu/svn@24017 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/default-mappingcalculators/trunk/pom.xml
+++ b/core3/default-mappingcalculators/trunk/pom.xml
@@ -105,6 +105,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
+			<artifactId>model-api</artifactId>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
 			<artifactId>vizmap-api</artifactId>
 			<version>3.0.0-alpha2</version>
 		</dependency>
