--- a/core3/default-mappingcalculators/trunk/pom.xml
+++ b/core3/default-mappingcalculators/trunk/pom.xml
@@ -111,7 +111,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>vizmap-api</artifactId>
-			<version>3.0.0-alpha2</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 		</dependency>
 
 
