--- a/core3/ding-presentation-impl/trunk/pom.xml
+++ b/core3/ding-presentation-impl/trunk/pom.xml
@@ -127,7 +127,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>swing-util</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
