Added the new concept of mutable vs/ immutable CyTables.
git-svn-id: http://chianti.ucsd.edu/svn@24023 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/filter-impl/trunk/pom.xml
+++ b/core3/filter-impl/trunk/pom.xml
@@ -64,6 +64,12 @@
         	<scope>compile</scope>
         </dependency>
         <dependency>
+        	<groupId>org.cytoscape</groupId>
+        	<artifactId>model-api</artifactId>
+        	<version>3.0.0-alpha3-SNAPSHOT</version>
+        	<scope>compile</scope>
+        </dependency>
+        <dependency>
         	<groupId>cytoscape-temp</groupId>
         	<artifactId>violinstrings</artifactId>
         	<version>1.0.2</version>
