--- a/cytoscape/trunk/corelibs/graph.fixed/pom.xml
+++ b/cytoscape/trunk/corelibs/graph.fixed/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.corelibs</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.1-beta2</version>
+    <version>2.8.1-beta3-SNAPSHOT</version>
   </parent>
 
   <artifactId>graph-fixed</artifactId>
