--- a/cytoscape/trunk/coreplugins/NetworkAnalyzer/pom.xml
+++ b/cytoscape/trunk/coreplugins/NetworkAnalyzer/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.coreplugins</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.1-beta2</version>
+    <version>2.8.1-beta3-SNAPSHOT</version>
   </parent>
 
   <artifactId>network-analyzer</artifactId>
