git-svn-id: http://chianti.ucsd.edu/svn@24041 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
+++ b/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
@@ -3,7 +3,7 @@
 # Any changes may make these visual mappings unreadable.
 # Please make sure you know what you are doing before modifying this file by hand.
 #
-#Tue Nov 02 12:10:02 PDT 2010
+#Mon Feb 07 16:18:04 PST 2011
 edgeAppearanceCalculator.Minimal.defaultEdgeColor=51,51,51
 edgeAppearanceCalculator.Minimal.defaultEdgeFont=SanSerif,plain,10
 edgeAppearanceCalculator.Minimal.defaultEdgeFontSize=10.0
@@ -68,17 +68,17 @@ edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeFont=SanSerif,plain,
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeFontSize=10.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabel=
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelColor=0,0,0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelOpacity=255
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelOpacity=255.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelPosition=C,C,c,0.00,0.00
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelWidth=100.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLineStyle=SOLID
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLineWidth=1.0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeOpacity=255
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeOpacity=255.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowColor=0,0,0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowOpacity=255
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowOpacity=255.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowShape=NONE
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowColor=0,0,0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowOpacity=255
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowOpacity=255.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowShape=NONE
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeToolTip=
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeLineWidthCalculator=PanGIA Overview Style-Edge Line Width-Continuous Mapper
@@ -200,8 +200,12 @@ edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.type=Disc
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.visualPropertyType=EDGE_COLOR
 edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controller=PanGIA.Interaction Type
 edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controllerType=4
+edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Genetic(negative)=0,204,204
+edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Genetic(positive)=153,153,0
 edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Genetic=0,204,204
-edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical&Genetic=204,0,51
+edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical&Genetic(negative)=0,51,102
+edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical&Genetic(positive)=51,51,0
+edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical&Genetic=0,51,102
 edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical=0,0,0
 edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
 edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.visualPropertyType=EDGE_COLOR
@@ -588,7 +592,7 @@ nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeWidth=160.0
 nodeAppearanceCalculator.PanGIA\ Module\ Style.nodeLabelCalculator=Module Style-Node Label-Passthrough Mapper
 nodeAppearanceCalculator.PanGIA\ Module\ Style.nodeSizeLocked=false
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeBorderColor=0,102,102
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeBorderOpacity=255
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeBorderOpacity=255.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeCustomGraphics1=cytoscape.visual.customgraphic.NullCustomGraphics
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeCustomGraphics2=cytoscape.visual.customgraphic.NullCustomGraphics
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeCustomGraphics3=cytoscape.visual.customgraphic.NullCustomGraphics
@@ -613,12 +617,12 @@ nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeFontSize=12.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeHight=30.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabel=
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelColor=51,51,51
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelOpacity=225.0
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelOpacity=255.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelPosition=C,C,c,0.00,0.00
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelWidth=100.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLineStyle=SOLID
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLineWidth=4.0
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeOpacity=255
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeOpacity=255.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeShape=roundrect
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeShowNestedNetwork=true
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeSize=65.0
@@ -784,12 +788,12 @@ nodeAppearanceCalculator.default.defaultNodeWidth=70.0
 nodeAppearanceCalculator.default.nodeLabelCalculator=NodeLabel
 nodeAppearanceCalculator.default.nodeSizeLocked=true
 nodeBorderColorCalculator.Nested\ Network\ Style-Node\ Border\ Color-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeBorderColorCalculator.Nested\ Network\ Style-Node\ Border\ Color-Discrete\ Mapper.mapping.controllerType=4
+nodeBorderColorCalculator.Nested\ Network\ Style-Node\ Border\ Color-Discrete\ Mapper.mapping.controllerType=-1
 nodeBorderColorCalculator.Nested\ Network\ Style-Node\ Border\ Color-Discrete\ Mapper.mapping.map.yes=0,102,204
 nodeBorderColorCalculator.Nested\ Network\ Style-Node\ Border\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeBorderColorCalculator.Nested\ Network\ Style-Node\ Border\ Color-Discrete\ Mapper.visualPropertyType=NODE_BORDER_COLOR
 nodeFillColorCalculator.Nested\ Network\ Style-Node\ Color-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeFillColorCalculator.Nested\ Network\ Style-Node\ Color-Discrete\ Mapper.mapping.controllerType=4
+nodeFillColorCalculator.Nested\ Network\ Style-Node\ Color-Discrete\ Mapper.mapping.controllerType=-1
 nodeFillColorCalculator.Nested\ Network\ Style-Node\ Color-Discrete\ Mapper.mapping.map.yes=255,255,255
 nodeFillColorCalculator.Nested\ Network\ Style-Node\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeFillColorCalculator.Nested\ Network\ Style-Node\ Color-Discrete\ Mapper.visualPropertyType=NODE_FILL_COLOR
@@ -956,12 +960,12 @@ nodeLabelCalculator.id\ as\ node\ labels.mapping.controller=ID
 nodeLabelCalculator.id\ as\ node\ labels.mapping.type=PassThroughMapping
 nodeLabelCalculator.id\ as\ node\ labels.visualPropertyType=NODE_LABEL
 nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mapping.controllerType=4
+nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mapping.controllerType=-1
 nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mapping.map.yes=0,102,204
 nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.visualPropertyType=NODE_LABEL_COLOR
 nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.controllerType=4
+nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.controllerType=-1
 nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.map.yes=SE,NW,c,0.00,0.00
 nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.visualPropertyType=NODE_LABEL_POSITION
@@ -1014,7 +1018,7 @@ nodeLineWidthCalculator.BasicDiscrete.mapping.controllerType=-1
 nodeLineWidthCalculator.BasicDiscrete.mapping.type=DiscreteMapping
 nodeLineWidthCalculator.BasicDiscrete.visualPropertyType=NODE_LINE_WIDTH
 nodeLineWidthCalculator.Nested\ Network\ Style-Node\ Line\ Width-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeLineWidthCalculator.Nested\ Network\ Style-Node\ Line\ Width-Discrete\ Mapper.mapping.controllerType=4
+nodeLineWidthCalculator.Nested\ Network\ Style-Node\ Line\ Width-Discrete\ Mapper.mapping.controllerType=-1
 nodeLineWidthCalculator.Nested\ Network\ Style-Node\ Line\ Width-Discrete\ Mapper.mapping.map.yes=5.0
 nodeLineWidthCalculator.Nested\ Network\ Style-Node\ Line\ Width-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeLineWidthCalculator.Nested\ Network\ Style-Node\ Line\ Width-Discrete\ Mapper.visualPropertyType=NODE_LINE_WIDTH
@@ -1046,7 +1050,7 @@ nodeShapeCalculator.BasicDiscrete.mapping.map.cell\ cycle=diamond
 nodeShapeCalculator.BasicDiscrete.mapping.type=DiscreteMapping
 nodeShapeCalculator.BasicDiscrete.visualPropertyType=NODE_SHAPE
 nodeShapeCalculator.Nested\ Network\ Style-Node\ Shape-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeShapeCalculator.Nested\ Network\ Style-Node\ Shape-Discrete\ Mapper.mapping.controllerType=4
+nodeShapeCalculator.Nested\ Network\ Style-Node\ Shape-Discrete\ Mapper.mapping.controllerType=-1
 nodeShapeCalculator.Nested\ Network\ Style-Node\ Shape-Discrete\ Mapper.mapping.map.yes=rect
 nodeShapeCalculator.Nested\ Network\ Style-Node\ Shape-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeShapeCalculator.Nested\ Network\ Style-Node\ Shape-Discrete\ Mapper.visualPropertyType=NODE_SHAPE
@@ -1099,7 +1103,7 @@ nodeUniformSizeCalculator.BasicDiscrete.mapping.map.cell\ cycle=60.0
 nodeUniformSizeCalculator.BasicDiscrete.mapping.type=DiscreteMapping
 nodeUniformSizeCalculator.BasicDiscrete.visualPropertyType=NODE_SIZE
 nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.controller=has_nested_network
-nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.controllerType=4
+nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.controllerType=-1
 nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.map.yes=60.0
 nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.visualPropertyType=NODE_SIZE
