--- a/core3/launch-framework/trunk/pom.xml
+++ b/core3/launch-framework/trunk/pom.xml
@@ -1,47 +1,73 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <parent>
-    <artifactId>parent</artifactId>
-    <groupId>org.cytoscape</groupId>
-    <version>3.0.0-alpha5</version>
-  </parent>
+	<parent>
+		<artifactId>parent</artifactId>
+		<groupId>org.cytoscape</groupId>
+		<version>3.0.0-alpha5</version>
+	</parent>
 
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.cytoscape</groupId>
-  <artifactId>launch-framework</artifactId>
-  <version>3.0.0-alpha2-SNAPSHOT</version>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.cytoscape</groupId>
+	<artifactId>launch-framework</artifactId>
+	<version>3.0.0-alpha2-SNAPSHOT</version>
 
-  <name>Cytoscape Launch Framework</name>
+	<name>Cytoscape Launch Framework</name>
 
-  <packaging>pom</packaging>
+	<packaging>pom</packaging>
 
-    <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/launch-framework/trunk</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/launch-framework/trunk</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/launch-framework/trunk</url>
-   </scm>
+	<scm>
+          <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/launch-framework/trunk</connection>
+          <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/launch-framework/trunk</developerConnection>
+          <url>http://chianti.ucsd.edu/svn/core3/launch-framework/trunk</url>
+	</scm>
 
-    <build>
-        <plugins>
+	<build>
+          <plugins>
             <plugin>
-                <inherited>false</inherited>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.1</version>
-                <configuration>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <goals>deploy</goals>
-                    <!-- so that impl bundles with modules will build correctly -->
-                    <preparationGoals>clean install</preparationGoals>
-                </configuration>
+              <inherited>false</inherited>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-release-plugin</artifactId>
+              <version>2.1</version>
+              <configuration>
+                <autoVersionSubmodules>true</autoVersionSubmodules>
+                <goals>deploy</goals>
+                <!-- so that impl bundles with modules will build correctly -->
+                <preparationGoals>clean install</preparationGoals>
+              </configuration>
             </plugin>
-        </plugins>
-    </build>
+          </plugins>
+	</build>
 
-  <modules>
-    <module>cmdline</module>
-    <module>launcher</module>
-    <module>startlevel-assembly</module>
-  </modules>
+	<repositories>
+		<!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
+		<repository>
+			<id>cytoscape_snapshots</id>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<name>Cytoscape Snapshots</name>
+			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+		</repository>
+		<!-- bootstrap for cytoscape dependencies, namely the parent POM releases -->
+		<repository>
+			<id>cytoscape_releases</id>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<name>Cytoscape Releases</name>
+			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
+		</repository>
+	</repositories>
 
+	<modules>
+		<module>cmdline</module>
+		<module>launcher</module>
+		<module>startlevel-assembly</module>
+	</modules>
 </project>
