--- a/core3/plugin-api/trunk/pom.xml
+++ b/core3/plugin-api/trunk/pom.xml
@@ -109,6 +109,37 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <encoding>UTF-8</encoding>
+          <locale>en</locale>
+          <javadocVersion>1.5</javadocVersion>
+          <links>
+            <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
+          </links>
+          <footer>Cytoscape ${version} API</footer>
+          <header>Cytoscape ${version} API</header>
+          <bottom>Copyright 2010 Cytoscape Consortium.  All rights reserved.</bottom>
+          <maxmemory>2g</maxmemory>
+          <additionalJOption>-J-Xmx2g</additionalJOption>
+          <includeDependencySources>true</includeDependencySources>
+          <dependencySourceIncludes>
+            <dependencySourceInclude>org.cytoscape:*</dependencySourceInclude>
+          </dependencySourceIncludes>
+		  <excludePackageNames>*.internal.*</excludePackageNames>
+        </configuration>
+        <executions>
+          <execution>
+            <id>javadoc-jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>aggregate-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
@@ -127,7 +158,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>swing-application-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
@@ -154,6 +185,33 @@
 			<artifactId>property-api</artifactId>
 			<version>3.0.0-alpha3</version>
 		</dependency>
+
+		<!-- 
+	     These dependencies aren't used to build this bundle,
+	     but we include them here to get them into the 
+		 jar-with-dependencies and javadoc. 
+		 -->
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>equations-api</artifactId>
+			<version>3.0.0-alpha1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>vizmap-gui-api</artifactId>
+			<version>3.0.0-alpha1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>webservice-api</artifactId>
+			<version>3.0.0-alpha1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>dnd-api</artifactId>
+			<version>3.0.0-alpha1</version>
+		</dependency>
+
 		
 		<dependency>
 			<groupId>junit</groupId>
