--- a/core3/equations-functions-impl/trunk/pom.xml
+++ b/core3/equations-functions-impl/trunk/pom.xml
@@ -166,7 +166,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>session-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<version>3.0.0-alpha2</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
