Updated bundle dependencies.
git-svn-id: http://chianti.ucsd.edu/svn@24083 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/work-headless-impl/trunk/pom.xml
+++ b/core3/work-headless-impl/trunk/pom.xml
@@ -105,7 +105,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>work-api</artifactId>
-      <version>3.0.0-alpha2-SNAPSHOT</version>
+      <version>3.0.0-alpha2</version>
     </dependency>
     <dependency>
     	<groupId>org.cytoscape</groupId>
