--- a/core3/swing-application-impl/trunk/pom.xml
+++ b/core3/swing-application-impl/trunk/pom.xml
@@ -109,7 +109,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>swing-util</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
