--- a/cytoscape/trunk/corelibs/giny/pom.xml
+++ b/cytoscape/trunk/corelibs/giny/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.corelibs</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.1-beta3-SNAPSHOT</version>
+    <version>2.8.1</version>
   </parent>
 
   <artifactId>giny</artifactId>
