--- a/cytoscape/trunk/coreplugins/cPath2/pom.xml
+++ b/cytoscape/trunk/coreplugins/cPath2/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.coreplugins</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.1-beta3-SNAPSHOT</version>
+    <version>2.8.1</version>
   </parent>
 
   <artifactId>cpath2</artifactId>
