--- a/cytoscape/trunk/archetypes/pom.xml
+++ b/cytoscape/trunk/archetypes/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>cytoscape.archetypes</groupId>
   <artifactId>parent</artifactId>
-  <version>2.8.1</version>
+  <version>2.8.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Cytoscape Archetypes Parent POM</name>
 
