--- a/cytoscape/trunk/coreplugins/filters/pom.xml
+++ b/cytoscape/trunk/coreplugins/filters/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.coreplugins</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.1</version>
+    <version>2.8.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>filters</artifactId>
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>quickfind</artifactId>
-      <version>2.8.1</version>
+      <version>2.8.2-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
