--- a/core3/core-task-impl/trunk/pom.xml
+++ b/core3/core-task-impl/trunk/pom.xml
@@ -155,7 +155,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>event-api</artifactId>
-			<version>3.0.0-alpha3</version>
+			<version>3.0.0-alpha4-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
