--- a/core3/vizmap-impl/trunk/pom.xml
+++ b/core3/vizmap-impl/trunk/pom.xml
@@ -114,5 +114,11 @@
 			<version>3.0.0-alpha2</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.cytoscape</groupId>
+            <artifactId>default-mappings</artifactId>
+            <version>3.0.0-alpha1</version>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 </project>
