--- a/cytoscape/trunk/archetypes/pom.xml
+++ b/cytoscape/trunk/archetypes/pom.xml
@@ -33,6 +33,19 @@
         </repository>
     </repositories>
 
+  <distributionManagement>
+    <repository>
+      <id>releases</id>
+      <name>Internal Releases</name>
+      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <name>Internal Snapshots</name>
+      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <modules>
     <module>sample-plugin</module>
     <module>ant-sample-plugin</module>
