making java help provided
git-svn-id: http://chianti.ucsd.edu/svn@24123 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/swing-application-api/trunk/pom.xml
+++ b/core3/swing-application-api/trunk/pom.xml
@@ -54,6 +54,7 @@
 			<groupId>cytoscape-sun</groupId>
 			<artifactId>jhall</artifactId>
 			<version>1.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
