fixed null menu name problem
git-svn-id: http://chianti.ucsd.edu/svn@24125 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/swing-application-impl/trunk/pom.xml
+++ b/core3/swing-application-impl/trunk/pom.xml
@@ -121,5 +121,10 @@
 			<artifactId>presentation-api</artifactId>
 			<version>3.0.0-alpha2</version>
 		</dependency>
+        <dependency>
+            <groupId>cytoscape-sun</groupId>
+            <artifactId>jhall</artifactId>
+            <version>1.0</version>
+        </dependency>
 	</dependencies>
 </project>
