Fixed fallout from a directory reorg in core-task-api.
git-svn-id: http://chianti.ucsd.edu/svn@24158 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/table-browser-impl/trunk/pom.xml
+++ b/core3/table-browser-impl/trunk/pom.xml
@@ -49,6 +49,14 @@
 					</instructions>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.cytoscape.mavenplugins</groupId>
+				<artifactId>cytoscape-profiler-maven-plugin</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<configuration>
+					<baselineVersion>2.7.99</baselineVersion>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
