Fixed fallout from a directory reorg in core-task-api.
git-svn-id: http://chianti.ucsd.edu/svn@24160 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/io-impl/trunk/pom.xml
+++ b/core3/io-impl/trunk/pom.xml
@@ -103,6 +103,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
+			<artifactId>core-task-api</artifactId>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
 			<artifactId>io-api</artifactId>
 			<version>3.0.0-alpha2</version>
 		</dependency>
