--- a/core3/webservice-biomart-client-impl/trunk/pom.xml
+++ b/core3/webservice-biomart-client-impl/trunk/pom.xml
@@ -106,7 +106,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>core-task-api</artifactId>
-			<version>3.0.0-alpha2</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 		</dependency>
 
 
