--- a/csplugins/trunk/ucsd/pwang/cy3samples/sample22/pom.xml
+++ b/csplugins/trunk/ucsd/pwang/cy3samples/sample22/pom.xml
@@ -96,13 +96,13 @@
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 
-<!-- 
+ 
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>work-swing-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
- -->
+
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>work-api</artifactId>
