--- a/core3/profiler-mojo/trunk/pom.xml
+++ b/core3/profiler-mojo/trunk/pom.xml
@@ -25,5 +25,10 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-project</artifactId>
+			<version>2.0.4</version>
+		</dependency>
 	</dependencies>
 </project>
