--- a/csplugins/trunk/ucsd/pwang/cy3samples/sample10/pom.xml
+++ b/csplugins/trunk/ucsd/pwang/cy3samples/sample10/pom.xml
@@ -96,16 +96,23 @@
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 
-<!-- 
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>work-swing-api</artifactId>
-			<version>3.0.0-alpha1</version>
-		</dependency>
- -->
+
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>work-api</artifactId>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
+		</dependency>
+
+ 
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>work-swing-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>core-task-api</artifactId>
 			<version>3.0.0-alpha3-SNAPSHOT</version>
 		</dependency>
 
