--- a/csplugins/trunk/ucsd/pwang/cy3samples/sample08/pom.xml
+++ b/csplugins/trunk/ucsd/pwang/cy3samples/sample08/pom.xml
@@ -89,27 +89,21 @@
 		</plugins>
 	</build>
   
+ 
   	<dependencies>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>swing-application-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
-		</dependency>
 
-<!-- 
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>work-swing-api</artifactId>
-			<version>3.0.0-alpha1</version>
-		</dependency>
- -->
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>work-api</artifactId>
+			<artifactId>model-api</artifactId>
 			<version>3.0.0-alpha3-SNAPSHOT</version>
+		</dependency>		
+
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>viewmodel-api</artifactId>
+			<version>3.0.0-alpha4-SNAPSHOT</version>
 		</dependency>
 
-		
     </dependencies>
   
 </project>
