added a mechanism for registering mock services
git-svn-id: http://chianti.ucsd.edu/svn@24197 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/integration-test-support/trunk/pom.xml
+++ b/core3/integration-test-support/trunk/pom.xml
@@ -71,5 +71,10 @@
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
+      <version>3.0</version>
+    </dependency>
   </dependencies>
 </project>
