refactored to use mock services rather than impl bundles
git-svn-id: http://chianti.ucsd.edu/svn@24198 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/model-impl/trunk/it/pom.xml
+++ b/core3/model-impl/trunk/it/pom.xml
@@ -63,14 +63,14 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>event-impl</artifactId>
-			<version>3.0.0-alpha2</version>
+			<artifactId>integration-test-support</artifactId>
+			<version>3.0.0-alpha4-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>integration-test-support</artifactId>
-			<version>3.0.0-alpha3</version>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
