--- a/csplugins/trunk/ucsd/pwang/cy3samples/sample20/pom.xml
+++ b/csplugins/trunk/ucsd/pwang/cy3samples/sample20/pom.xml
@@ -90,19 +90,14 @@
 	</build>
   
   	<dependencies>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>swing-application-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
-		</dependency>
 
-<!-- 
+
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>work-swing-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<artifactId>core-task-api</artifactId>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 		</dependency>
- -->
+		
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>work-api</artifactId>
