--- a/csplugins/trunk/ucsd/pwang/cy3samples/sample07/pom.xml
+++ b/csplugins/trunk/ucsd/pwang/cy3samples/sample07/pom.xml
@@ -96,6 +96,13 @@
 			<artifactId>swing-application-api</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
+
+ 		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>core-task-api</artifactId>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
+		</dependency>
+
 		
     </dependencies>
   
