--- a/csplugins/trunk/ucsd/mes/genomespace-plugin/pom.xml
+++ b/csplugins/trunk/ucsd/mes/genomespace-plugin/pom.xml
@@ -75,13 +75,11 @@
       <artifactId>dm-messages</artifactId>
       <version>1.0-beta2</version>
     </dependency>
-	<!--
     <dependency>
       <groupId>cytoscape-temp</groupId>
-      <artifactId>gs-common-util</artifactId>
-      <version>1.0-beta1</version>
+      <artifactId>atm-messages</artifactId>
+      <version>1.0-beta2</version>
     </dependency>
-	-->
   </dependencies>
 
   <repositories>
