updates and now working in 2.8.2
git-svn-id: http://chianti.ucsd.edu/svn@24271 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/mes/genomespace-libs-plugin/pom.xml
+++ b/csplugins/trunk/ucsd/mes/genomespace-libs-plugin/pom.xml
@@ -104,13 +104,11 @@
       <artifactId>jersey-client</artifactId>
       <version>1.5-ea09</version>
     </dependency>
-	<!--
     <dependency>
-      <groupId>com.sun.jersey</groupId>
+      <groupId>com.sun.jersey.contribs</groupId>
       <artifactId>jersey-apache-client</artifactId>
-      <version>1.5-ea092</version>
+      <version>1.5-ea09</version>
     </dependency>
-	-->
     <dependency>
       <groupId>javax.ws.rs</groupId>
       <artifactId>jsr311-api</artifactId>
